Updated cors config from eazybytes course